Rename endpoint /orgs/:org_name/repositories to /orgs/:org_name/repos

--- a/app/views/repos/index.html.slim
+++ b/app/views/repos/index.html.slim
@@ -10,7 +10,7 @@
       li.active
         = @org_name
 
-  .repositories
+  .repos
     - @subscriptions.each do |s|
       .repository
         = s.repo
