--- a/app/views/orgs/index.html.slim
+++ b/app/views/orgs/index.html.slim
@@ -12,4 +12,4 @@
     - @orgs.each do |o|
       ul
         li
-          = link_to o.login, org_repositories_path(o.login)
+          = link_to o.login, org_repos_path(o.login)
