--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,8 +8,28 @@ html
     link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"
     script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"
   body
+    .container.container-fluid
+      nav.navbar.navbar-default
+        .navbar-header
+          = link_to 'GitHub Organization Watcher', orgs_path, class: 'navbar-brand'
 
-    a href="https://github.com/masutaka/github-organization-watcher"
-      img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"
+        .navbar-collapse
+          ul.nav.navbar-nav
+            li
+              a href="https://github.com/masutaka/github-organization-watcher" target="_blank"
+                | CONTRIBUTE
+          ul.nav.navbar-nav.navbar-right
+            - if logged_in?
+              li.dropdown
+                a.dropdown-toggle href="#" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"
+                  = content_tag(:span, '', class: 'glyphicon glyphicon-user', 'aria-hidden' => 'true')
+                  = " #{current_user.nickname} "
+                  span.caret
+                ul.dropdown-menu
+                  li
+                    - icon = content_tag(:span, '', class: 'glyphicon glyphicon-log-out', 'aria-hidden' => 'true')
+                    = link_to "#{icon} Logout".html_safe, logout_path
 
-    = yield
+      = yield
+
+
