Avoid root_path with session

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -11,7 +11,7 @@ html
     .container.container-fluid
       nav.navbar.navbar-default
         .navbar-header
-          = link_to 'GitHub Organization Watcher', orgs_path, class: 'navbar-brand'
+          = link_to 'GitHub Organization Watcher', root_path, class: 'navbar-brand'
 
         .navbar-collapse
           ul.nav.navbar-nav
