--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,8 +8,8 @@ html
     link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"
     script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"
   body
-    .container.container-fluid
-      nav.navbar.navbar-default
+    nav.navbar.navbar-default
+      .container
         .navbar-header
           = link_to 'GitHub Organization Watcher', root_path, class: 'navbar-brand'
 
@@ -30,6 +30,7 @@ html
                     - icon = content_tag(:span, '', class: 'glyphicon glyphicon-log-out', 'aria-hidden' => 'true')
                     = link_to "#{icon} Logout".html_safe, logout_path
 
+    .container
       - if flash.present?
         .alert.alert-danger.alert-dismissible role="alert"
           - flash.each do |_key, value|
