Add rel="nofollow noopener" to outside links

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -16,7 +16,7 @@ html
         .navbar-collapse
           ul.nav.navbar-nav
             li
-              a href="https://github.com/masutaka/github-organization-watcher" target="_blank"
+              a href="https://github.com/masutaka/github-organization-watcher" target="_blank" rel="nofollow noopener"
                 | CONTRIBUTE
           ul.nav.navbar-nav.navbar-right
             - if logged_in?
