--- a/app/views/repos/index.html.slim
+++ b/app/views/repos/index.html.slim
@@ -9,7 +9,7 @@
     .repos
       - @subscriptions.each do |s|
         .repo id=s.repo
-          = link_to s.repo, "https://github.com/#{@org_name}/#{s.repo}", target: '_blank'
+          = link_to s.repo, "https://github.com/#{@org_name}/#{s.repo}", target: '_blank', rel: 'nofollow noopener'
           .btn-group.conditions data-toggle='buttons'
             label.btn.btn-primary class=('active' if s.condition == :unwatching)
               input.unwatching type='radio' name="#{s.repo}-conditions" autocomplete='off' checked=(s.condition == :unwatching)
